@@ -72,7 +72,7 @@ function add_behaviour() {
   elements.each(function(node) {
     node.addEventListener('click', function () {
       var message = $('message')
-      if ($F('url').match(/^http:\/\/.*imdb\.com\/title\/tt([0-9]{7})(\/){0,1}.*$/i)) {
+      if ($F('url').match(/^https?:\/\/.*imdb\.com\/title\/tt([0-9]{7})(\/){0,1}.*$/i)) {
         var rating = parseInt(this.id.substr(6))
         // make selected rating 'stuck'
         $A( $('rating').getElementsByTagName('a') ).each( function(el) {
@@ -109,11 +109,12 @@ function initial_focus() {
 // Parse url and paste it into <input type="text" name="url"> if it's imdb.com page
 function parse_uri() {
   // No url, nothing to parse
-  if (location.href.indexOf('?url=') == -1) return
+  if (location.href.indexOf('?url=') === -1) return
 
   // Parse and set as url if it is imdb movie page
   var url = unescape(location.href.substring(location.href.indexOf('?url=') + 5))
-  if (url.match(/^http:\/\/.*imdb\.com\/title\/tt([0-9]{7})(\/){0,1}.*$/i)) {
+  console.log(url)
+  if (url.match(/^https?:\/\/.*imdb\.com\/title\/tt([0-9]{7})(\/){0,1}.*$/i)) {
     $('url').value = beautify_imdb_uri(url)
   }
 }
